Correct the text alignment and box sizing

--- a/styles.css
+++ b/styles.css
@@ -100,41 +100,30 @@ ul {
 /* ---------------------- INFO SECTION ------------------------  */
 
 .info-section {
-    display: flex;
-    flex-direction: column;
+    padding: 0 10%;
+    text-align: center;
 }
 
 .info-section .heading {
-    display: flex;
-    justify-content: center;
     font: 36px bolder;
     color: #1f2937;
     padding: 30px;
 }
 
 .images div {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     border: 3px solid #3882F6;
     border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.cell {
+    max-width: 120px;
 }
 
 .content {
     display: flex;
-}
-
-.cell {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+    justify-content: space-evenly;
     gap: 1rem;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
-}
-
-.cell .text {
-    width: 100px;
-    flex-direction: column;
 }
